# wardragon-console

./: .gitignore  LICENSE  README.md  pyproject.toml
packaging/: install.sh  setup-pi-status-overlay.sh  setup-sddm-status.sh  setup-time-sync.sh  sudoers-wardragon-console  wardragon-avahi-alias  wardragon-avahi-alias.service  wardragon-console.service  wardragon-tether-alias
packaging/avahi/: wardragon-console.service
packaging/pi-greeter-overlay/: config.json  style.css  wardragon-status-rotator
packaging/sddm-theme/: Main.qml
src/wardragon_console/: __init__.py  actions.py  certs.py  collectors.py  config_schema.py  config_view.py  dragonscope.py  main.py  network.py  server.py  settings.py  state.py  tether.py  updates.py
src/wardragon_console/static/: app.js  index.html  styles.css
tests/: test_actions.py  test_certs.py  test_config_view.py  test_dragonscope.py  test_network.py  test_server.py  test_state.py  test_static_assets.py  test_tether_alias.py  test_updates.py
