[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wardragon-console"
version = "0.1.0"
description = "Local web console for WarDragon drone detection kits"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "CEMAXECUTER LLC" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "pyzmq>=22",
]

[project.scripts]
wardragon-console = "wardragon_console.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wardragon_console = ["static/*"]
